--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700&display=swap"
+      rel="stylesheet"
+    />
     <title>bluECS - SV-ECS</title>
     <style>
       body {
         margin: 0;
         padding: 0;
+        font-family: "Noto Sans", Arial, sans-serif;
       }
 
       #map {
