more incorporation of OpenBridge

--- a/src/icon-demo.html
+++ b/src/icon-demo.html
@@ -16,6 +16,10 @@
 
   <body>
     <h1>OpenBridge Icon Gallery</h1>
+    <p>
+      To copy the import code, click the 'i' button. To copy the deploy code
+      (which you must then edit title and id on) click the 'd' button.
+    </p>
     <div id="icon-demo"></div>
     <script type="module" src="/src/icon-demo.ts"></script>
   </body>
