updated route manager

--- a/src/open-bridge-demos/icon-demo.html
+++ b/src/open-bridge-demos/icon-demo.html
@@ -21,6 +21,6 @@
       (which you must then edit title and id on) click the 'd' button.
     </p>
     <div id="icon-demo"></div>
-    <script type="module" src="/src/icon-demo.ts"></script>
+    <script type="module" src="/src/open-bridge-demos/icon-demo.ts"></script>
   </body>
 </html>
