--- a/src/open-bridge-demos/navigation-instruments-demo.html
+++ b/src/open-bridge-demos/navigation-instruments-demo.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>OpenBridge Component Demo</title>
+    <title>OpenBridge Navigation Instruments Demo</title>
     <style>
       body {
         font-family: sans-serif;
       }
-      #component-demo {
+      #navigation-instruments-demo {
         padding: 24px;
         display: flex;
         flex-wrap: wrap;
         gap: 16px;
       }
-      .component-wrapper {
+      .navigation-instruments-wrapper {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -26,20 +26,20 @@
         box-sizing: border-box;
         background: #fafcff;
       }
-      .component-label {
+      .navigation-instruments-label {
         font-size: 12px;
         text-align: center;
         margin-bottom: 8px;
         word-break: break-all;
         max-width: 180px;
       }
-      .component-btn-row {
+      .navigation-instruments-btn-row {
         display: flex;
         justify-content: center;
         gap: 6px;
         margin-bottom: 8px;
       }
-      .component-btn-row button {
+      .navigation-instruments-btn-row button {
         padding: 2px 6px;
         font-size: 12px;
         cursor: pointer;
@@ -47,12 +47,15 @@
     </style>
   </head>
   <body>
-    <h1>OpenBridge Component Gallery</h1>
+    <h1>OpenBridge Navigation Instruments Gallery</h1>
     <p>
       Click 'i' to copy the import code, or 'd' to copy the deploy code for each
-      component.
+      navigation-instruments.
     </p>
-    <div id="component-demo"></div>
-    <script type="module" src="/src/component-demo.ts"></script>
+    <div id="navigation-instruments-demo"></div>
+    <script
+      type="module"
+      src="/src/open-bridge-demos/navigation-instruments-demo.ts"
+    ></script>
   </body>
 </html>
